# pr

./: .gitignore  README.md  count_scores.py  main.py  pyproject.toml
azulvision/: board.py  classify.py  config.py  utils.py
azulvision/board_extraction/: config.py  dataset.py  extract.py  model.py  one_hot.py  raw.py
azulvision/square_classifier/: classifier.py  config.py  dataset.py  model.py  raw.py
data/board_extraction/: label_class_dict.csv
data/square_classifier/: class_names.csv
ml/notebooks/: square_classifier.ipynb
tools/: labelme2voc.py  split_board.py  split_files.py
