[tool.poetry]
name = "pr"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11,<3.12"
pandas = "^2.1.3"
pillow = "^10.1.0"
lxml = "^4.9.3"
jupyter = "^1.0.0"
matplotlib = "^3.8.1"
numpy = "^1.26.2"
scikit-learn = "^1.3.2"
torch = "^2.1.0"
torchvision = "^0.16.0"
setuptools = "^68.2.2"
tqdm = "^4.66.1"
wandb = "^0.16.0"
albumentations = "^1.3.1"
opencv-python-headless = "^4.8.1.78"
seaborn = "^0.13.0"
segmentation-models-pytorch = "^0.3.3"
patchify = "^0.2.3"
imutils = "^0.5.4"
kornia = {extras = ["x"], version = "^0.7.0"}

[tool.poetry.group.dev.dependencies]
pyqt5 = "5.15.2"
labelme = "^5.3.1"
imgviz = "^1.7.4"
video-cli = "^1.3.3"
torchinfo = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
